新增 game 路由，为 control 路由添加功能，新增游戏服务执行命令功能，修复少量 bug
